aws/cloudformation/company-module-resources.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'MyERP Company Module - Multi-tenant Infrastructure'

Parameters:
  Environment:
    Type: String
    Default: dev
    AllowedValues: [dev, staging, prod]
  
  VpcId:
    Type: AWS::EC2::VPC::Id
  
  PrivateSubnetIds:
    Type: CommaDelimitedList
  
  PublicSubnetIds:
    Type: CommaDelimitedList
  
  ClusterName:
    Type: String
  
  DomainName:
    Type: String
  
  CertificateArn:
    Type: String

Resources:
  CompanyDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: !Sub '${Environment}-myerp-company-db-subnet-group'
      DBSubnetGroupDescription: 'Subnet group for Company Module database'
      SubnetIds: !Ref PrivateSubnetIds

  CompanyDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Environment}-myerp-company-db-sg'
      GroupDescription: 'Security group for Company Module database'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref CompanyServiceSecurityGroup

  CompanyDatabase:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Snapshot
    Properties:
      DBInstanceIdentifier: !Sub '${Environment}-myerp-company-db'
      DBName: myerp_company
      Engine: postgres
      EngineVersion: '15.4'
      DBInstanceClass: !If [IsProd, db.t3.medium, db.t3.micro]
      AllocatedStorage: !If [IsProd, 100, 20]
      StorageEncrypted: true
      MasterUsername: myerp_user
      MasterUserPassword: !Ref CompanyDBPassword
      VPCSecurityGroups:
        - !Ref CompanyDBSecurityGroup
      DBSubnetGroupName: !Ref CompanyDBSubnetGroup
      BackupRetentionPeriod: !If [IsProd, 7, 1]
      MultiAZ: !If [IsProd, true, false]
      PubliclyAccessible: false
      DeletionProtection: !If [IsProd, true, false]

  CompanyDBPassword:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub '${Environment}-myerp-company-db-password'
      GenerateSecretString:
        SecretStringTemplate: '{"username": "myerp_user"}'
        GenerateStringKey: 'password'
        PasswordLength: 32
        ExcludeCharacters: '"@/\'

  CompanyServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Environment}-myerp-company-service-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8085
          ToPort: 8085
          SourceSecurityGroupId: !Ref CompanyALBSecurityGroup

  CompanyALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Environment}-myerp-company-alb-sg'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  CompanyALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub '${Environment}-myerp-company-alb'
      Type: application
      Scheme: internet-facing
      SecurityGroups:
        - !Ref CompanyALBSecurityGroup
      Subnets: !Ref PublicSubnetIds

  CompanyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub '${Environment}-myerp-company-tg'
      Port: 8085
      Protocol: HTTP
      VpcId: !Ref VpcId
      TargetType: ip
      HealthCheckPath: /actuator/health

  CompanyALBListenerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref CompanyTargetGroup
      LoadBalancerArn: !Ref CompanyALB
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref CertificateArn

  CompanyTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub '${Environment}-myerp-company-service'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: !If [IsProd, 1024, 512]
      Memory: !If [IsProd, 2048, 1024]
      ExecutionRoleArn: !Sub 'arn:aws:iam::${AWS::AccountId}:role/ecsTaskExecutionRole'
      ContainerDefinitions:
        - Name: company-service
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/myerp-company:latest'
          PortMappings:
            - ContainerPort: 8085
          Environment:
            - Name: SPRING_PROFILES_ACTIVE
              Value: aws
            - Name: DATABASE_URL
              Value: !Sub 'jdbc:postgresql://${CompanyDatabase.Endpoint.Address}:5432/myerp_company'
          Secrets:
            - Name: DATABASE_PASSWORD
              ValueFrom: !Ref CompanyDBPassword
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref CompanyLogGroup
              awslogs-region: !Ref AWS::Region

  CompanyLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub '/aws/ecs/${Environment}-myerp-company-service'
      RetentionInDays: !If [IsProd, 30, 7]

  CompanyService:
    Type: AWS::ECS::Service
    DependsOn: CompanyALBListenerHTTPS
    Properties:
      ServiceName: !Sub '${Environment}-myerp-company-service'
      Cluster: !Ref ClusterName
      TaskDefinition: !Ref CompanyTaskDefinition
      LaunchType: FARGATE
      DesiredCount: !If [IsProd, 2, 1]
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
            - !Ref CompanyServiceSecurityGroup
          Subnets: !Ref PrivateSubnetIds
      LoadBalancers:
        - ContainerName: company-service
          ContainerPort: 8085
          TargetGroupArn: !Ref CompanyTargetGroup

  CompanyDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Sub '${DomainName}.'
      Name: !Sub 'company.${DomainName}'
      Type: A
      AliasTarget:
        DNSName: !GetAtt CompanyALB.DNSName
        HostedZoneId: !GetAtt CompanyALB.CanonicalHostedZoneID

Conditions:
  IsProd: !Equals [!Ref Environment, prod]

Outputs:
  CompanyDatabaseEndpoint:
    Value: !GetAtt CompanyDatabase.Endpoint.Address
    Export:
      Name: !Sub '${Environment}-myerp-company-db-endpoint'

  CompanyServiceURL:
    Value: !Sub 'https://company.${DomainName}'
    Export:
      Name: !Sub '${Environment}-myerp-company-service-url'
